Fixed: sas-progress-bar component tag in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <sas-progress-bar progress="35" theme="red"></sas-components>
+  <sas-progress-bar progress="35" theme="red"></sas-progress-bar>
 
   <script type="module" src="./out-tsc/src/sas-components.js"></script>
 </body>
